# norn

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CONTRIBUTING.md  Doxyfile.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  ROADMAP.md  aclocal.m4  autogen.sh  codecov.yml  config.h  config.h.in  config.status  configure  configure.ac  configure~  cppcheck.supp  libnorn.la  libtool  norn  norn.pc  norn.pc.in  norn.rb  test_bep44  test_dhtstore  test_norn
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.libs/: libnorn.0.dylib  libnorn.dylib  libnorn.la  libnorn.lai  norn  test_bep44  test_dhtstore  test_norn
.repo/norn/: notes.md
.repo/project/: PROGRESS.md  ROADMAP.md  SESSION-SUMMARY-2026-06-24-FINAL.md  SESSION-SUMMARY-2026-06-24-NAT.md  SESSION-SUMMARY-2026-06-24.md  profile.md
.repo/project/issues/: FEAT-016-ASYNC.md  FEAT-016.md  FEAT-017-NAT.md  FEAT-017-STATUS.md  FEAT-018-STREAM-MULTIPLEX.md  FEAT-021-UPNP.md  FEAT-022-MULTIPATH-RELAY.md  FEAT-023-HOLEPUNCH-INTEGRATION.md  MILESTONE-0.10.0.md  MILESTONE-0.13.0.md  MILESTONE-0.14.0.md  MILESTONE-0.2.0.md  MILESTONE-0.3.0.md  MILESTONE-0.4.0.md  MILESTONE-0.5.0.md  MILESTONE-0.6.0.md  MILESTONE-0.7.0.md  MILESTONE-0.8.0.md  MILESTONE-0.9.0.md
Formula/: norn.rb
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
bindings/rust/: Cargo.toml  README.md
bindings/rust/norn/: Cargo.toml
bindings/rust/norn-sys/: Cargo.toml  build.rs
bindings/rust/norn/examples/: node_id.rs  tunnel.rs
bindings/rust/norn/src/: cluster.rs  lib.rs  pump.rs  session.rs  stream.rs
contrib/: coverage.sh  deploy
contrib/launchd/: io.norn.nornd.plist  io.norn.nornd.user.plist
contrib/pit/: cluster_fleet.sh
contrib/systemd/: nornd.service  nornd.socket
contrib/systemd/user/: nornd.service  nornd.socket
debian/: .gitignore  autoreconf.after  autoreconf.before  changelog  control  copyright  libnorn-dev.install  libnorn-doc.docs  libnorn.install  norn.install  norn.postinst.debhelper  norn.postrm.debhelper  norn.preinst  rules
docs/: BEP-REFERENCES.md  NAT-IMPLEMENTATION-STATUS.md  NAT-TRAVERSAL.md  PORTING.md  architecture.md  cli.md  cluster-kv.md  nornd.md  private-overlay.md
issues/: MILESTONE-0.11.0-CLUSTER-KV.md  MILESTONE-0.12.0-NORND.md  MILESTONE-0.3.0-MULTI-CONSUMER.md
issues/bug/: README.md
issues/bug/003/: README.md
issues/bug/done/: BUG-001-nornd-not-started-after-install.md  BUG-002-stale-libnorn-usr-local-breaks-nornd.md
issues/feature/: NORN-001-core-library.md
issues/feature/done/: 002-logging-module.md  003-architecture-documentation.md  007-build-system-cleanup.md  009-static-analysis.md  010-cli-implementation.md  013-crypto-suite-vtable.md  014-kademlia-id-width.md  015-idexch-de-application.md  016-dial-session-orchestration.md  017-harmonised-nat-traversal.md  018-stream-tunnel-forward.md  019-language-bindings.md  020-private-overlay-bootstrap.md  024-raft-core.md  025-cluster-session-glue.md  026-kv-store-class-membership.md  027-nornd-ipc-protocol.md  (+14 more)
man/: libnorn.3.in  norn.1  norn.1.in  nornd.8.in
norn-0.1.0/: Makefile.am  README.md  norn.pc.in
norn-0.1.0/docs/: architecture.md  test-plan.md
norn-0.1.0/src/: norn.c
norn-0.1.0/tests/: test_bep44.c  test_channel.c  test_channel_edges.c  test_dhtstore.c  test_norn_async.c  test_recstore.c  test_stream.c  test_stream_edges.c  test_stream_random.c  test_stream_recovery.c  test_streammux_random.c  test_transport.c
scripts/: dist.sh  install.sh  test.sh
src/: norn.c  norn_forward_main.c
src/.deps/: norn-norn.Po
src/libnorn/: attr.c  attr.h  bencode.c  bencode.h  bep44.c  bep44.h  channel.c  channel.h  crypto.c  crypto.h  dhtstore.c  dhtstore.h  idexch.c  idexch.h  kademlia.c  kademlia.h  libnorn_la-bencode.lo  libnorn_la-bep44.lo  libnorn_la-crypto.lo  libnorn_la-dhtstore.lo  libnorn_la-kademlia.lo  libnorn_la-log.lo  libnorn_la-net.lo  libnorn_la-norn.lo  libnorn_la-norn_impl.lo  libnorn_la-recstore.lo  libnorn_la-sha1.lo  log.c  log.h  mainline.h  net.c  net.h  norn.c  norn.h  norn_bonjour.c  norn_bonjour.h  norn_cluster.c  norn_cluster.h  norn_endpoint_cache.c  norn_endpoint_cache.h  (+47 more)
src/nornd/: agent.c  agent.h  cli_cluster.c  cli_cluster.h  cli_keys.c  cli_keys.h  cli_node.c  cli_node.h  cli_peer.c  cli_peer.h  client.c  client.h  dht_persist.c  dht_persist.h  dispatch.c  dispatch.h  identity.c  identity.h  ipc.c  ipc.h  keydir.c  keydir.h  localstore.c  localstore.h  main.c  peer_fetch.c  peer_fetch.h  peers.c  peers.h  publog.c  publog.h  pubqueue.c  pubqueue.h  served.c  served.h  served_conn.c  served_conn.h  served_proto.c  served_proto.h  store.c  (+3 more)
tests/: coverage-tracked.txt  test_attr.c  test_bencode.c  test_bep44.c  test_channel.c  test_channel_edges.c  test_cluster.c  test_crypto.c  test_dhtstore.c  test_forward.c  test_idexch.c  test_kademlia.c  test_kvstore.c  test_localstore.c  test_log.c  test_mainline.c  test_net.c  test_norn.c  test_norn_async.c  test_norn_idexch.c  test_norn_kad.c  test_norn_session.c  test_nornd_agent.c  test_nornd_client.c  test_nornd_dispatch.c  test_nornd_identity.c  test_nornd_ipc.c  test_nornd_keydir.c  test_nornd_peer_fetch.c  test_nornd_peers.c  test_nornd_served.c  test_nornd_served_dial.c  test_nornd_served_proto.c  test_nornd_store.c  test_overlay.c  test_overlay_net.c  test_raft.c  test_recstore.c  test_relay.c  test_rendezvous.c  (+12 more)
tests/.deps/: test_bep44-test_bep44.Po  test_dhtstore-test_dhtstore.Po  test_norn-test_norn.Po
tests/pit/: network.bats  nornd_perf.bats  run.sh  test_helper.bash
tests/sit/: build.bats  cli.bats  coverage.bats  handshake.bats  nornd.bats  nornd_cluster.bats  run.sh  session.bats  test_helper.bash
tests/unit/: test_channel.c  test_cluster.c  test_holepunch.c  test_kvstore.c  test_norn.c  test_norn_async.c  test_nornd_agent.c  test_nornd_dispatch.c  test_nornd_served.c  test_overlay_net.c  test_recstore.c  test_rendezvous.c  test_stream.c  test_stream_cc.c  test_stream_random.c  test_suite.c  test_transport_udp.c
(+53 files in other folders)
